force-app/main/default/objects/ChargeMapItem__c/ChargeMapItem__c.object-meta.xml
<CustomObject>
    <label>Charge Map Item</label>
    <nameField>
        <label>Charge Map Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charge Map Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>