force-app/main/default/objects/ChargeMapItem__c/fields/Amount_TTC__c.field-meta.xml
<CustomField>
    <fullName>Amount_TTC__c</fullName>
    <label>Amount TTC</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>