force-app/main/default/objects/ChargeMapItem__c/fields/BillableStatusDate__c.field-meta.xml
<CustomField>
    <fullName>BillableStatusDate__c</fullName>
    <description>Date the item was put in &quot;Billable&quot; status</description>
    <label>Billable status date</label>
    <type>Date</type>
</CustomField>