force-app/main/default/objects/ChargeMapItem__c/fields/BillingSchedule__c.field-meta.xml
<CustomField>
    <fullName>BillingSchedule__c</fullName>
    <label>Billing schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biannual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>One-off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>