force-app/main/default/objects/ChargeMapItem__c/fields/ChannelPartner__c.field-meta.xml
<CustomField>
    <fullName>ChannelPartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Charge Map Items (Channel partner)</relationshipLabel>
    <relationshipName>Charge_Map_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>