force-app/main/default/objects/ChargeMapItem__c/fields/ChargeMap__c.field-meta.xml
<CustomField>
    <fullName>ChargeMap__c</fullName>
    <label>Charge Map</label>
    <referenceTo>ChargeMap__c</referenceTo>
    <relationshipLabel>Charge Map Items</relationshipLabel>
    <relationshipName>ChargeMapItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>