force-app/main/default/objects/ChargeMapItem__c/fields/DiscountNumber__c.field-meta.xml
<CustomField>
    <fullName>DiscountNumber__c</fullName>
    <label>Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>