force-app/main/default/objects/ChargeMapItem__c/fields/End_date__c.field-meta.xml
<CustomField>
    <fullName>End_date__c</fullName>
    <label>End date</label>
    <type>Date</type>
</CustomField>