force-app/main/default/objects/ChargeMapItem__c/fields/EndDateRevRec__c.field-meta.xml
<CustomField>
    <fullName>EndDateRevRec__c</fullName>
    <formula>ChargeMap__r.EndDateRevRec__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End date - Rev Rec</label>
    <type>Date</type>
</CustomField>