force-app/main/default/objects/ChargeMapItem__c/fields/EndUser__c.field-meta.xml
<CustomField>
    <fullName>EndUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End user</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Charge Map Items</relationshipLabel>
    <relationshipName>Charge_Map_Items</relationshipName>
    <type>Lookup</type>
</CustomField>