force-app/main/default/objects/ChargeMapItem__c/fields/LineDescription__c.field-meta.xml
<CustomField>
    <fullName>LineDescription__c</fullName>
    <label>Line description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>