force-app/main/default/objects/ChargeMapItem__c/fields/NbOfMonthsProrated__c.field-meta.xml
<CustomField>
    <fullName>NbOfMonthsProrated__c</fullName>
    <label>Nb of months prorated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>