force-app/main/default/objects/ChargeMapItem__c/fields/Netsuite_Billing_Schedule_Id__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Billing_Schedule_Id__c</fullName>
    <formula>IF(
  ProductNature__c = &quot;Service&quot;,
  18,
  IF(
    ISPICKVAL(BillingSchedule__c, &quot;Annual&quot;) &amp;&amp; ISPICKVAL(Term__c, &quot;In arrears&quot;),
    19,
    IF(
      ISPICKVAL(BillingSchedule__c, &quot;Annual&quot;) &amp;&amp; ISPICKVAL(Term__c, &quot;In advance&quot;),
      6,
      IF(
        ISPICKVAL(BillingSchedule__c, &quot;Monthly&quot;) &amp;&amp; ISPICKVAL(Term__c, &quot;In arrears&quot;),
        29,
        IF(
          ISPICKVAL(BillingSchedule__c, &quot;Monthly&quot;) &amp;&amp; ISPICKVAL(Term__c, &quot;In advance&quot;),
          28,
          IF(
            ISPICKVAL(BillingSchedule__c, &quot;Biannual&quot;) &amp;&amp; ISPICKVAL(Term__c, &quot;In arrears&quot;),
            15,
            IF(
              ISPICKVAL(BillingSchedule__c, &quot;Biannual&quot;) &amp;&amp; ISPICKVAL(Term__c, &quot;In advance&quot;),
              3,
              IF(
                ISPICKVAL(BillingSchedule__c, &quot;Quarterly&quot;) &amp;&amp; ISPICKVAL(Term__c, &quot;In arrears&quot;),
                16,
                IF(
                  ISPICKVAL(BillingSchedule__c, &quot;Quarterly&quot;) &amp;&amp; ISPICKVAL(Term__c, &quot;In advance&quot;),
                  5,
                  999 /* Valeur par défaut si rien ne matche */
                )
              )
            )
          )
        )
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Netsuite Billing Schedule Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>