force-app/main/default/objects/ChargeMapItem__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Charge Map Items</relationshipLabel>
    <relationshipName>Charge_Map_Items</relationshipName>
    <type>Lookup</type>
</CustomField>