force-app/main/default/objects/ChargeMapItem__c/fields/PercentageOfSpend__c.field-meta.xml
<CustomField>
    <fullName>PercentageOfSpend__c</fullName>
    <label>% Of Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>