force-app/main/default/objects/ChargeMapItem__c/fields/PO_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Request_Date__c</fullName>
    <label>PO Request Date</label>
    <type>Date</type>
</CustomField>