force-app/main/default/objects/ChargeMapItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Charge Map Items</relationshipLabel>
    <relationshipName>Charge_Map_Items</relationshipName>
    <type>Lookup</type>
</CustomField>