force-app/main/default/objects/ChargeMapItem__c/fields/ProductNature__c.field-meta.xml
<CustomField>
    <fullName>ProductNature__c</fullName>
    <formula>TEXT(Product__r.Nature__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Nature</label>
    <type>Text</type>
</CustomField>