force-app/main/default/objects/ChargeMapItem__c/fields/ProductNetsuiteId__c.field-meta.xml
<CustomField>
    <fullName>ProductNetsuiteId__c</fullName>
    <formula>Product__r.NetsuiteId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Netsuite Id</label>
    <type>Text</type>
</CustomField>