force-app/main/default/objects/ChargeMapItem__c/fields/ProratedAmount__c.field-meta.xml
<CustomField>
    <fullName>ProratedAmount__c</fullName>
    <label>Prorated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>