force-app/main/default/objects/ChargeMapItem__c/fields/ProratedAmountPerMonth__c.field-meta.xml
<CustomField>
    <fullName>ProratedAmountPerMonth__c</fullName>
    <formula>ProratedAmount__c /  NbOfMonthsProrated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prorated Amount per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>