force-app/main/default/objects/ChargeMapItem__c/fields/Sales_unit_price__c.field-meta.xml
<CustomField>
    <fullName>Sales_unit_price__c</fullName>
    <label>Sales unit price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>