force-app/main/default/objects/ChargeMapItem__c/fields/SalesOrderID__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderID__c</fullName>
    <externalId>true</externalId>
    <label>Sales Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>