force-app/main/default/objects/ChargeMapItem__c/fields/SourceOpportunity__c.field-meta.xml
<CustomField>
    <fullName>SourceOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Charge Map Items</relationshipLabel>
    <relationshipName>ChargeMapItems</relationshipName>
    <type>Lookup</type>
</CustomField>