force-app/main/default/objects/ChargeMapItem__c/fields/StartDateRevRec__c.field-meta.xml
<CustomField>
    <fullName>StartDateRevRec__c</fullName>
    <label>Billing start date</label>
    <type>Date</type>
</CustomField>