force-app/main/default/objects/ChargeMapItem__c/validationRules/CantActivateItemMissingInfos.validationRule-meta.xml
<ValidationRule>
    <fullName>CantActivateItemMissingInfos</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Activated__c = TRUE,
  PRIORVALUE(Activated__c) = FALSE,
  OR(
    ISBLANK(TEXT(( BillingSchedule__c ))),
    ISBLANK( StartDateRevRec__c ),
    ISBLANK(TEXT(( Term__c ))),
    AND(
      PO_Required__c = TRUE,
      OR(
        ISBLANK( PO_Reference__c ),
        ISBLANK( PO_Request_Date__c )
      )
    )
  )
)</errorConditionFormula>
    <errorMessage>You can&apos;t activate these items because one of these fields is empty : Billing Schedule, Term, Start Date
If a PO is required on the items, the PO Reference and PO Request date must be filled</errorMessage>
</ValidationRule>