force-app/main/default/objects/ChargeMapItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SalesOrderID__c</columns>
    <columns>ChargeMap__c</columns>
    <columns>Amount__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>BillableStatusDate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ChargeMap__c</field>
        <operation>contains</operation>
        <value>vector</value>
    </filters>
    <label>All</label>
</ListView>